# jira-epic-timeline

./: .env.sample  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: development.md
src/timeline/: __init__.py  main_cli.py  timeline.py
tests/: conftest.py  test_timeline.py
